fixed text-align

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,5 @@
 h1 {
 	font-weight: normal;
 	font-size: 50px;
-	text-align: centered;
-	font-family: Verdana, Geneva, sans-serif;
+	text-align: center;
 }
